# tauri

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
tauri-plugin-datapass/: Cargo.toml  README.md  package.json  tauri.conf.json
tauri-plugin-datapass/examples/tauri-app/: package.json
tauri-plugin-datapass/examples/tauri-app/src/: App.svelte
tauri-plugin-datapass/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-datapass/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-datapass/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-datapass/guest-js/: index.ts
tauri-plugin-datapass/permissions/autogenerated/: reference.md
tauri-plugin-datapass/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
